fix view on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -39,13 +39,11 @@ html {
 
 body {
   overflow: -moz-hidden-unscrollable;
-  width: 100%;
 }
 
 /* ALL PAGE CONTAINER */
 .wrapper{
   display: grid;
-  justify-content: center;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
